--- a/.github/test.yml
+++ b/.github/test.yml
@@ -1,17 +1,29 @@
-name: go-test
+# name: go-test
+# on: [push]
+# jobs:
+#   go-test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: set up
+#         uses: actions/setup-go@v2
+#         with:
+#           go-version: 1.17
+#         id: go
+#       - name: checkout
+#         uses: actions/checkout@v2
+#       - name: install gotip
+#         run: go install golang.org/dl/gotip@latest && gotip download
+#       - name: test
+#         run: gotip ./...
+name: learn-github-actions
 on: [push]
 jobs:
-  go-test:
+  check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - name: set up
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          go-version: 1.17
-        id: go
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: install gotip
-        run: go install golang.org/dl/gotip@latest && gotip download
-      - name: test
-        run: gotip ./...
+          node-version: "14"
+      - run: npm install -g bats
+      - run: bats -v
