--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - name: install gotip
         run: go install golang.org/dl/gotip@latest && gotip download
       - name: test
-        run: gotip ./...
+        run: gotip test ./...
 # name: learn-github-actions
 # on: [push]
 # jobs:
