--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,12 @@
-name: go-test
+name: go-test-2
 on: [push]
 jobs:
   go-test:
     runs-on: ubuntu-latest
     steps:
-      - name: set up
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-        id: go
       - name: checkout
         uses: actions/checkout@v2
-      - name: install gotip
-        run: go install golang.org/dl/gotip@latest && gotip download
+      - name: pull gotip image
+        run: docker pull nobishino/gotip
       - name: test
-        run: gotip test ./...
+        run: docker run --volume `pwd`:/src nobishino/gotip /bin/bash -c "gotip test ./..."
